# wikdict-gemini

./: README.md  gmnisrv.ini  make_venv.sh  pyproject.toml
cgi-bin/: search
static/: about.gmi  contact.gmi  download.gmi  index.gmi
